# backend/routes/Address_route/Address_router.js
@@ -7,7 +7,8 @@ const {
     getTambonByAmphoeID,
     getAddressesByGeo,
     getNearBKK,
-    getAmphoeInBKK
+    getAmphoeInBKK,
+    getNameDetail
 } = require("../../controllers/Address/AddressController");
 
 router.get("/pronvinces", getPronvinces);
@@ -16,6 +17,8 @@ router.get("/tambon/:AmphoeID", getTambonByAmphoeID);
 router.get("/geo/:geocode", getAddressesByGeo);
 router.get("/nearbkk", getNearBKK);
 router.get("/amphoeinbkk", getAmphoeInBKK);
+router.get("/all/detail/by_tambon/:TambonID", getNameDetail);
+
 
 
 
